--- a/style.css
+++ b/style.css
@@ -73,3 +73,35 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
 }
+
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+/* li:nth-child(2) {
+  color: #ff0025;
+} */
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #1098ad;
+}
+
+a:hover {
+  font-weight: bold;
+  color: red;
+  text-decoration: underline red;
+}
+
+a:active {
+  background-color: #444;
+  font-style: italic;
+}
