--- a/style.css
+++ b/style.css
@@ -105,3 +105,19 @@ a:active {
   background-color: #444;
   font-style: italic;
 }
+/* 
+#copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green;
+} */
